Updated translations from transifex for Grizzly RC.
Fixes bug 1157308.

Change-Id: I06d4e9834d66d834e9e636ffcd80ae5e4afa34d7

--- a/openstack_dashboard/locale/fr/LC_MESSAGES/django.po
+++ b/openstack_dashboard/locale/fr/LC_MESSAGES/django.po
@@ -1,28 +1,31 @@
-# Translations of Dashboard for OpenStack User Interface.
-# This file is distributed under the same license as the Dashboard for OpenStack.
-# Erwan Gallen <erwan@zinux.com>, 2012.
-#
+# SOME DESCRIPTIVE TITLE.
+# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
+# This file is distributed under the same license as the PACKAGE package.
+# 
+# Translators:
+# Translators:
+# Alexis Monville <alexis.monville@ayeba.fr>, 2013.
 msgid ""
 msgstr ""
-"Project-Id-Version: openstack-dashboard\n"
-"Report-Msgid-Bugs-To: \n"
+"Project-Id-Version: Horizon\n"
+"Report-Msgid-Bugs-To: https://launchpad.net/horizon\n"
 "POT-Creation-Date: 2013-03-12 04:09+0000\n"
-"PO-Revision-Date: 2012-05-08 00:20+0100\n"
-"Last-Translator: Erwan Gallen <erwan@zinux.com>\n"
-"Language-Team: French <fr@zinux.com>\n"
-"Language: fr\n"
+"PO-Revision-Date: 2013-03-12 08:31+0000\n"
+"Last-Translator: alexis.monville <alexis.monville@ayeba.fr>\n"
+"Language-Team: English (http://www.transifex.com/projects/p/openstack/language/en/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n > 1)\n"
+"Language: fr\n"
+"Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
 #: settings.py:152
 msgid "Bulgarian (Bulgaria)"
-msgstr ""
+msgstr "Bulgare"
 
 #: settings.py:153
 msgid "Czech"
-msgstr ""
+msgstr "Tchèque"
 
 #: settings.py:154
 msgid "English"
@@ -46,11 +49,11 @@ msgstr "Japonais"
 
 #: settings.py:159
 msgid "Korean (Korea)"
-msgstr ""
+msgstr "Coréen"
 
 #: settings.py:160
 msgid "Dutch (Netherlands)"
-msgstr ""
+msgstr "Néerlandais"
 
 #: settings.py:161
 msgid "Polish"
@@ -61,7 +64,6 @@ msgid "Portuguese"
 msgstr "Portugais"
 
 #: settings.py:163
-#, fuzzy
 msgid "Portuguese (Brazil)"
 msgstr "Portugais"
 
@@ -98,7 +100,7 @@ msgstr ""
 
 #: dashboards/admin/dashboard.py:30
 msgid "Admin"
-msgstr ""
+msgstr "Admin"
 
 #: dashboards/admin/flavors/forms.py:36 dashboards/admin/info/tables.py:67
 #: dashboards/admin/instances/tables.py:91
@@ -140,7 +142,7 @@ msgstr ""
 #: dashboards/project/volumes/tables.py:172
 #: dashboards/project/volumes/templates/volumes/_detail_overview.html:9
 msgid "Name"
-msgstr ""
+msgstr "Nom"
 
 #: dashboards/admin/flavors/forms.py:37 dashboards/admin/flavors/tables.py:52
 #: dashboards/admin/projects/workflows.py:44
@@ -148,11 +150,11 @@ msgstr ""
 #: dashboards/project/instances/templates/instances/_launch_details_help.html:10
 #: usage/tables.py:19
 msgid "VCPUs"
-msgstr ""
+msgstr "VCPUs"
 
 #: dashboards/admin/flavors/forms.py:38
 msgid "RAM MB"
-msgstr ""
+msgstr "RAM Mo"
 
 #: dashboards/admin/flavors/forms.py:39
 msgid "Root Disk GB"
@@ -242,7 +244,7 @@ msgstr ""
 #: dashboards/project/instances/templates/instances/_launch_details_help.html:14
 #: usage/tables.py:22
 msgid "RAM"
-msgstr ""
+msgstr "RAM"
 
 #: dashboards/admin/flavors/tables.py:56
 #: dashboards/project/instances/templates/instances/_launch_details_help.html:11
@@ -430,8 +432,8 @@ msgstr ""
 
 #: dashboards/admin/flavors/templates/flavors/_edit.html:19
 msgid ""
-"Note: this will not affect the resources allocated to any existing instances "
-"using this flavor."
+"Note: this will not affect the resources allocated to any existing instances"
+" using this flavor."
 msgstr ""
 
 #: dashboards/admin/flavors/templates/flavors/_edit.html:24
@@ -530,8 +532,8 @@ msgstr ""
 #: dashboards/admin/images/templates/images/_create.html:26
 #: dashboards/project/images_and_snapshots/templates/images_and_snapshots/images/_create.html:26
 msgid ""
-"The Image Location field MUST be a valid and direct URL to the image binary. "
-"URLs that redirect or serve error pages will result in unusable images."
+"The Image Location field MUST be a valid and direct URL to the image binary."
+" URLs that redirect or serve error pages will result in unusable images."
 msgstr ""
 
 #: dashboards/admin/images/templates/images/_create.html:32
@@ -1132,7 +1134,7 @@ msgstr ""
 #: dashboards/admin/projects/templates/projects/index.html:6
 #: templates/403.html:24 templates/404.html:23
 msgid "Projects"
-msgstr ""
+msgstr "Projets"
 
 #: dashboards/admin/projects/tables.py:19
 msgid "Modify Users"
@@ -1761,8 +1763,7 @@ msgstr ""
 msgid ""
 "\n"
 "    The volume type defines the characteristics of a volume.\n"
-"    It usually maps to a set of capabilities of the storage back-end driver "
-"to be used for this volume.\n"
+"    It usually maps to a set of capabilities of the storage back-end driver to be used for this volume.\n"
 "    Examples: \"Performance\", \"SSD\", \"Backup\", etc.\n"
 "    "
 msgstr ""
@@ -1921,7 +1922,8 @@ msgid "No floating IP pools available."
 msgstr ""
 
 #: dashboards/project/access_and_security/floating_ips/workflows.py:42
-msgid "Select the IP address you wish to associate with the selected instance."
+msgid ""
+"Select the IP address you wish to associate with the selected instance."
 msgstr ""
 
 #: dashboards/project/access_and_security/floating_ips/workflows.py:48
@@ -2076,9 +2078,8 @@ msgid "Open"
 msgstr ""
 
 #: dashboards/project/access_and_security/security_groups/forms.py:74
-#, fuzzy
 msgid "Port Range"
-msgstr "Portugais"
+msgstr ""
 
 #: dashboards/project/access_and_security/security_groups/forms.py:84
 #: dashboards/project/access_and_security/security_groups/forms.py:94
@@ -2244,8 +2245,8 @@ msgstr ""
 #: dashboards/project/access_and_security/templates/access_and_security/keypairs/_import.html:17
 msgid ""
 "Keypairs are ssh credentials which are injected into images when they are "
-"launched. Creating a new key pair registers the public key and downloads the "
-"private key (a .pem file)."
+"launched. Creating a new key pair registers the public key and downloads the"
+" private key (a .pem file)."
 msgstr ""
 
 #: dashboards/project/access_and_security/templates/access_and_security/keypairs/_create.html:18
@@ -2295,10 +2296,10 @@ msgstr ""
 
 #: dashboards/project/access_and_security/templates/access_and_security/security_groups/_add_rule.html:20
 msgid ""
-"For TCP and UDP rules you may choose to open either a single port or a range "
-"of ports. Selecting the \"Port Range\" option will provide you with space to "
-"provide both the starting and ending ports for the range. For ICMP rules you "
-"instead specify an ICMP type and code in the spaces provided."
+"For TCP and UDP rules you may choose to open either a single port or a range"
+" of ports. Selecting the \"Port Range\" option will provide you with space "
+"to provide both the starting and ending ports for the range. For ICMP rules "
+"you instead specify an ICMP type and code in the spaces provided."
 msgstr ""
 
 #: dashboards/project/access_and_security/templates/access_and_security/security_groups/_add_rule.html:21
@@ -2459,18 +2460,18 @@ msgstr ""
 
 #: dashboards/project/containers/templates/containers/_copy.html:17
 msgid ""
-"Make a new copy of an existing object to store in this or another container. "
-"You may also specify a path at which the new copy should live inside of the "
-"selected container."
+"Make a new copy of an existing object to store in this or another container."
+" You may also specify a path at which the new copy should live inside of the"
+" selected container."
 msgstr ""
 
 #: dashboards/project/containers/templates/containers/_create.html:17
 msgid ""
 "A container is a storage compartment for your data and provides a way for "
 "you to organize your data. You can think of a container as a folder in "
-"Windows &reg; or a directory in UNIX &reg;. The primary difference between a "
-"container and these other file system concepts is that containers cannot be "
-"nested. You can, however, create an unlimited number of containers within "
+"Windows &reg; or a directory in UNIX &reg;. The primary difference between a"
+" container and these other file system concepts is that containers cannot be"
+" nested. You can, however, create an unlimited number of containers within "
 "your account. Data must be stored in a container so you must have at least "
 "one container defined in your account prior to uploading data."
 msgstr ""
@@ -2497,8 +2498,8 @@ msgid ""
 "Within a container you can group your objects into pseudo-folders, which "
 "behave similarly to folders in your desktop operating system, with the "
 "exception that they are virtual collections defined by a common prefix on "
-"the object's name. A slash (/) character is used as the delimiter for pseudo-"
-"folders in the Object Store."
+"the object's name. A slash (/) character is used as the delimiter for "
+"pseudo-folders in the Object Store."
 msgstr ""
 
 #: dashboards/project/containers/templates/containers/upload.html:6
@@ -2567,8 +2568,8 @@ msgstr ""
 #: dashboards/project/images_and_snapshots/images/forms.py:75
 #: dashboards/project/images_and_snapshots/images/forms.py:82
 msgid ""
-"The minimum disk size required to boot the image. If unspecified, this value "
-"defaults to 0 (no minimum)."
+"The minimum disk size required to boot the image. If unspecified, this value"
+" defaults to 0 (no minimum)."
 msgstr ""
 
 #: dashboards/project/images_and_snapshots/images/forms.py:81
@@ -3306,8 +3307,8 @@ msgstr ""
 
 #: dashboards/project/instances/workflows/create_instance.py:400
 msgid ""
-"A script or set of commands to be executed after the instance has been built "
-"(max 16kb)."
+"A script or set of commands to be executed after the instance has been built"
+" (max 16kb)."
 msgstr ""
 
 #: dashboards/project/instances/workflows/create_instance.py:407
@@ -3578,9 +3579,7 @@ msgstr ""
 msgid ""
 "Create Pool for current tenant.\n"
 "\n"
-"Assign a name and description for the pool. Choose one subnet where all "
-"members of this pool must be on. Select the protocol and load balancing "
-"method for this pool. Admin State is UP (checked) by defaul.t"
+"Assign a name and description for the pool. Choose one subnet where all members of this pool must be on. Select the protocol and load balancing method for this pool. Admin State is UP (checked) by defaul.t"
 msgstr ""
 
 #: dashboards/project/loadbalancers/workflows.py:98
@@ -3633,9 +3632,9 @@ msgstr ""
 #: dashboards/project/loadbalancers/workflows.py:169
 msgid ""
 "Create a vip (virtual IP) for this pool. Assign a name and description for "
-"the vip. Specify an IP address and port for the vip. Choose the protocol and "
-"session persistence method for the vip.Specify the max connections allowed. "
-"Admin State is UP (checked) by default."
+"the vip. Specify an IP address and port for the vip. Choose the protocol and"
+" session persistence method for the vip.Specify the max connections allowed."
+" Admin State is UP (checked) by default."
 msgstr ""
 
 #: dashboards/project/loadbalancers/workflows.py:195
@@ -3695,9 +3694,7 @@ msgstr ""
 msgid ""
 "Add member to selected pool.\n"
 "\n"
-"Choose one or more listed instances to be added to the pool as member(s). "
-"Assign a numeric weight for this member Specify the port number the member"
-"(s) operate on; e.g., 80."
+"Choose one or more listed instances to be added to the pool as member(s). Assign a numeric weight for this member Specify the port number the member(s) operate on; e.g., 80."
 msgstr ""
 
 #: dashboards/project/loadbalancers/workflows.py:327
@@ -3759,9 +3756,7 @@ msgstr ""
 msgid ""
 "Create a monitor for a pool.\n"
 "\n"
-"Select target pool and type of monitoring. Specify delay, timeout, and retry "
-"limits required by the monitor. Specify method, URL path, and expected HTTP "
-"codes upon success."
+"Select target pool and type of monitoring. Specify delay, timeout, and retry limits required by the monitor. Specify method, URL path, and expected HTTP codes upon success."
 msgstr ""
 
 #: dashboards/project/loadbalancers/workflows.py:431
@@ -3952,8 +3947,7 @@ msgstr ""
 #: dashboards/project/networks/workflows.py:47
 msgid ""
 "From here you can create a new network.\n"
-"In addition a subnet associated with the network can be created in the next "
-"panel."
+"In addition a subnet associated with the network can be created in the next panel."
 msgstr ""
 
 #: dashboards/project/networks/workflows.py:61
@@ -3982,10 +3976,10 @@ msgstr ""
 
 #: dashboards/project/networks/workflows.py:78
 msgid ""
-"IP address of Gateway (e.g. 192.168.0.254) The default value is the first IP "
-"of the network address (e.g. 192.168.0.1 for 192.168.0.0/24). If you use the "
-"default, leave blank. If you want to use no gateway, check 'Disable Gateway' "
-"below."
+"IP address of Gateway (e.g. 192.168.0.254) The default value is the first IP"
+" of the network address (e.g. 192.168.0.1 for 192.168.0.0/24). If you use "
+"the default, leave blank. If you want to use no gateway, check 'Disable "
+"Gateway' below."
 msgstr ""
 
 #: dashboards/project/networks/workflows.py:87
@@ -4031,9 +4025,9 @@ msgstr ""
 
 #: dashboards/project/networks/workflows.py:146
 msgid ""
-"IP address allocation pools. Each entry is &lt;start_ip_address&gt;,&lt;"
-"end_ip_address&gt; (e.g., 192.168.1.100,192.168.1.120) and one entry per "
-"line."
+"IP address allocation pools. Each entry is "
+"&lt;start_ip_address&gt;,&lt;end_ip_address&gt; (e.g., "
+"192.168.1.100,192.168.1.120) and one entry per line."
 msgstr ""
 
 #: dashboards/project/networks/workflows.py:153
@@ -4051,9 +4045,9 @@ msgstr ""
 
 #: dashboards/project/networks/workflows.py:160
 msgid ""
-"Additional routes announced to the hosts. Each entry is &lt;"
-"destination_cidr&gt;,&lt;nexthop&gt; (e.g., 192.168.200.0/24,10.56.1.254)and "
-"one entry per line."
+"Additional routes announced to the hosts. Each entry is "
+"&lt;destination_cidr&gt;,&lt;nexthop&gt; (e.g., "
+"192.168.200.0/24,10.56.1.254)and one entry per line."
 msgstr ""
 
 #: dashboards/project/networks/workflows.py:168
@@ -4115,8 +4109,7 @@ msgstr ""
 
 #: dashboards/project/networks/workflows.py:329
 #, python-format
-msgid ""
-"Failed to create subnet \"%(sub)s\" for network \"%(net)s\":  %(reason)s"
+msgid "Failed to create subnet \"%(sub)s\" for network \"%(net)s\":  %(reason)s"
 msgstr ""
 
 #: dashboards/project/networks/workflows.py:345
@@ -4281,9 +4274,8 @@ msgid "DHCP Enable"
 msgstr ""
 
 #: dashboards/project/networks/templates/networks/subnets/_detail_overview.html:31
-#, fuzzy
 msgid "Additional routes"
-msgstr "Chinois traditionnel"
+msgstr ""
 
 #: dashboards/project/networks/templates/networks/subnets/_detail_overview.html:34
 msgid "Destination"
@@ -4458,8 +4450,8 @@ msgstr ""
 #: dashboards/project/volumes/forms.py:127
 #, python-format
 msgid ""
-"A volume of %(req)iGB cannot be created as you only have %(avail)iGB of your "
-"quota available."
+"A volume of %(req)iGB cannot be created as you only have %(avail)iGB of your"
+" quota available."
 msgstr ""
 
 #: dashboards/project/volumes/forms.py:134
@@ -4648,17 +4640,15 @@ msgstr "Page non trouvée"
 
 #: templates/404.html:9
 msgid "The page you were looking for doesn't exist"
-msgstr "La page que vous recherchez n'existe pas"
+msgstr "La page que vous recherchée n'existe pas"
 
 #: templates/404.html:10
 msgid "You may have mistyped the address or the page may have moved."
-msgstr ""
-"Vous avez peut-être mal tapé l'adresse ou la page a peut-être été déplacée."
+msgstr "Vous avez peut-être mal orthographié l'adresse ou la page a été déplacée"
 
 #: templates/500.html:20
-#, fuzzy
 msgid "Server error"
-msgstr "Erreur de serveur interne"
+msgstr ""
 
 #: templates/500.html:67
 msgid "Something went wrong!"
