Import translations for Havana release
* Import translation update of 100% completed languages.
  12 translated languages are avaialable.
* Russian (ru) and Chinese Taiwan (zh_tw) newly completed their
  translations since RC1. They are added to the language list.
* Update POT files

This commit is directly proposed to milestone-proposed branch
because the master branch is already opened for Icehouse development
and the translatable strings are no longer same as those in Havana.

I believe it is the final import.

Change-Id: I9e8e7c28fae64f1aad7fbd5f226910fb9ee6a325
Closes-Bug: #1234317

--- a/horizon/locale/nl_NL/LC_MESSAGES/django.po
+++ b/horizon/locale/nl_NL/LC_MESSAGES/django.po
@@ -4,14 +4,15 @@
 # 
 # Translators:
 # Erik-Martijn Kasimier <erik.kasimier@nouveaumedia.nl>, 2012
+# RoyB <roy@server.biz>, 2013
 # toMeloos <tom@server.biz>, 2013
 msgid ""
 msgstr ""
 "Project-Id-Version: Horizon\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2013-09-26 00:30-0500\n"
-"PO-Revision-Date: 2013-09-26 17:56+0000\n"
-"Last-Translator: Akihiro MOTOKI <amotoki@gmail.com>\n"
+"POT-Creation-Date: 2013-10-08 23:48-0500\n"
+"PO-Revision-Date: 2013-09-30 19:39+0000\n"
+"Last-Translator: RoyB <roy@server.biz>\n"
 "Language-Team: Dutch (Netherlands) (http://www.transifex.com/projects/p/openstack/language/nl_NL/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -41,7 +42,7 @@ msgstr "Onbevoegd: %s"
 msgid "Unauthorized. Please try logging in again."
 msgstr "Onbevoegd. Meldt u zich opnieuw aan."
 
-#: middleware.py:67
+#: middleware.py:72
 msgid "Session timed out."
 msgstr "Sessie verlopen."
 
@@ -132,7 +133,7 @@ msgstr "Afmelden"
 
 #: templates/splash.html:7 templates/auth/login.html:4
 msgid "Login"
-msgstr "Aanmelding"
+msgstr "Aanmelden"
 
 #: templates/auth/_login.html:5
 msgid "Log In"
@@ -238,7 +239,7 @@ msgstr "Huidig Project"
 
 #: templates/horizon/common/_sidebar.html:39
 msgid "Managing Region"
-msgstr "Regio beheren"
+msgstr "Beherende Regio"
 
 #: templates/horizon/common/_usage_summary.html:5
 msgid "Select a period of time to query its usage"
