--- a/horizon/locale/ko_KR/LC_MESSAGES/django.po
+++ b/horizon/locale/ko_KR/LC_MESSAGES/django.po
@@ -10,9 +10,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Horizon\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2013-09-26 00:30-0500\n"
-"PO-Revision-Date: 2013-09-26 17:56+0000\n"
-"Last-Translator: Akihiro MOTOKI <amotoki@gmail.com>\n"
+"POT-Creation-Date: 2013-10-08 23:48-0500\n"
+"PO-Revision-Date: 2013-10-04 16:06+0000\n"
+"Last-Translator: ujuc Gang <potopro@gmail.com>\n"
 "Language-Team: Korean (Korea) (http://www.transifex.com/projects/p/openstack/language/ko_KR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -42,7 +42,7 @@ msgstr "권한 없음: %s"
 msgid "Unauthorized. Please try logging in again."
 msgstr "권한이 없습니다. 다시 로그인 해주십시오."
 
-#: middleware.py:67
+#: middleware.py:72
 msgid "Session timed out."
 msgstr "세션 타임 아웃."
 
@@ -330,11 +330,11 @@ msgstr "IP 주소 형식이 잘못 되었습니다."
 
 #: utils/fields.py:49
 msgid "Invalid version for IP address"
-msgstr "IP 주소의 버전이 잘못되었습니다."
+msgstr "IP 주소 버전이 잘못되었습니다."
 
 #: utils/fields.py:50
 msgid "Invalid subnet mask"
-msgstr "Subnet mask가 잘못되었습니다."
+msgstr "서브넷 mask가 잘못되었습니다."
 
 #: utils/validators.py:25 utils/validators.py:49
 msgid "Not a valid port number"
