--- a/horizon/locale/ko_KR/LC_MESSAGES/djangojs.po
+++ b/horizon/locale/ko_KR/LC_MESSAGES/djangojs.po
@@ -10,9 +10,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Horizon\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2013-09-15 18:17+0000\n"
-"PO-Revision-Date: 2013-09-26 12:29+0000\n"
-"Last-Translator: 명환 유 <funfun.yoo@gmail.com>\n"
+"POT-Creation-Date: 2013-10-08 23:48-0500\n"
+"PO-Revision-Date: 2013-10-04 16:08+0000\n"
+"Last-Translator: ujuc Gang <potopro@gmail.com>\n"
 "Language-Team: Korean (Korea) (http://www.transifex.com/projects/p/openstack/language/ko_KR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -40,7 +40,7 @@ msgstr "필터"
 
 #: static/horizon/js/horizon.membership.js:185
 msgid "No roles"
-msgstr "역할 없음"
+msgstr "Role 없음"
 
 #: static/horizon/js/horizon.modals.js:33
 msgid "Cancel"
@@ -61,12 +61,12 @@ msgstr "업데이트 도중 오류가 발생하였습니다."
 #: static/horizon/js/horizon.tables.js:154
 #, c-format
 msgid "You have selected %s. "
-msgstr "%s 를 선택하였습니다"
+msgstr "%s를 선택하였습니다. "
 
 #: static/horizon/js/horizon.tables.js:156
 #, c-format
 msgid "Confirm %s"
-msgstr "%s 를 확인하세요."
+msgstr "%s를 확인하세요."
 
 #: static/horizon/js/horizon.tables.js:157
 msgid "Please confirm your selection. This action cannot be undone."
