--- a/horizon/locale/nl_NL/LC_MESSAGES/djangojs.po
+++ b/horizon/locale/nl_NL/LC_MESSAGES/djangojs.po
@@ -3,14 +3,15 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
+# RoyB <roy@server.biz>, 2013
 # toMeloos <tom@server.biz>, 2013
 msgid ""
 msgstr ""
 "Project-Id-Version: Horizon\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2013-09-15 18:17+0000\n"
-"PO-Revision-Date: 2013-09-19 09:54+0000\n"
-"Last-Translator: toMeloos <tom@server.biz>\n"
+"POT-Creation-Date: 2013-10-08 23:48-0500\n"
+"PO-Revision-Date: 2013-09-28 15:07+0000\n"
+"Last-Translator: RoyB <roy@server.biz>\n"
 "Language-Team: Dutch (Netherlands) (http://www.transifex.com/projects/p/openstack/language/nl_NL/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -68,7 +69,7 @@ msgstr "Bevestig %s"
 
 #: static/horizon/js/horizon.tables.js:157
 msgid "Please confirm your selection. This action cannot be undone."
-msgstr "Bevestig alstublieft uw selectie. Deze actie kan niet ongedaan gemaakt worden."
+msgstr "Bevestig uw selectie. Deze actie kan niet ongedaan gemaakt worden."
 
 #: static/horizon/js/horizon.tables.js:171
 msgid "Working"
